vlib/v/checker/tests/match_undefined_cond.v
type Asd = int

fn main() {
	res := match Asd {
		1 { 'foo' }
		2 { 'test' }
		else { '' }
	}
	_ = res
}
